<resources>
    <string name="font_roboto_condensed">sans-serif-black</string>
    <string name="font_roboto_condensed_light">sans-serif-light</string>
    <string name="all_about">About</string>
    <string name="all_agree">Agree</string>
    <string name="all_calculating">Calculating</string>
    <string name="all_calibrate">Calibrate</string>
    <string name="all_calibration">Calibration</string>
    <string name="all_camera">Camera</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_close">Close</string>
    <string name="all_complete">Complete</string>
    <string name="all_confirm">Confirm</string>
    <string name="all_congratulations">Congratulations</string>
    <string name="all_connect">Connect</string>
    <string name="all_continue">Continue</string>
    <string name="all_control">Control</string>
    <string name="all_delete">Delete</string>
    <string name="all_disconnect">Disconnect</string>
    <string name="all_done">Done</string>
    <string name="all_down">Down</string>
    <string name="all_edit">Edit</string>
    <string name="all_enclosure">Enclosure</string>
    <string name="all_experiment">Experiment</string>
    <string name="all_factory">Factory</string>
    <string name="all_failed">Failed</string>
    <string name="all_finish">Finish</string>
    <string name="all_general">General</string>
    <string name="all_guides">Guide</string>
    <string name="all_hello">Hello</string>
    <string name="all_language">Language</string>
    <string name="all_load">Load</string>
    <string name="all_move">Move</string>
    <string name="all_next">Next</string>
    <string name="all_no">No</string>
    <string name="all_notification">Notification</string>
    <string name="all_on">On</string>
    <string name="all_off">Off</string>
    <string name="all_ok">OK</string>
    <string name="all_pause">Pause</string>
    <string name="all_preview">Preview</string>
    <string name="all_print">Print</string>
    <string name="all_ready">Ready</string>
    <string name="all_reconnect">Reconnect</string>
    <string name="all_recover">Recover</string>
    <string name="all_rename">Rename</string>
    <string name="all_resume">Resume</string>
    <string name="all_return">Return</string>
    <string name="all_offset">Offset</string>
    <string name="all_save">Save</string>
    <string name="all_settings">Settings</string>
    <string name="all_skip">Skip</string>
    <string name="all_start">Start</string>
    <string name="all_stop">Stop</string>
    <string name="all_unload">Unload</string>
    <string name="all_up">Up</string>
    <string name="all_update">Update</string>
    <string name="all_warning">Warning</string>
    <string name="all_wifi">Wi-Fi</string>
    <string name="all_yes">Yes</string>
    <string name="all_retry">Retry</string>
    <string name="all_quit">Quit</string>
    <string name="all_capture">Capture</string>
    <string name="all_measure">Measure</string>
    <string name="all_3d_printing">3D Printing</string>
    <string name="all_cnc">CNC</string>
    <string name="all_laser">Laser</string>
    <string name="all_10w_laser">10W Laser</string>
    <string name="all_20w_laser">20W Laser</string>
    <string name="all_40w_laser">40W Laser</string>
    <string name="all_2w_laser">2W Laser</string>
    <string name="all_laser_height">Laser Height</string>
    <string name="all_rotary_module">Rotary Module</string>
    <string name="all_emergency_stop">Emergency Stop</string>
    <string name="all_safety_goggles">Safety Goggles</string>
    <string name="all_air_purifier">Air Purifier</string>
    <string name="all_manual_mode">Manual Mode</string>
    <string name="all_touch_material_title">Touch Material</string>
    <string name="all_quick_swap_kit">Quick Swap Kit</string>
    <string name="all_bracing_kit">Bracing Kit</string>
    <string name="all_dual_extrusion_module">Dual Extrusion Module</string>
    <string name="all_cnc_200w">200W CNC</string>
    <string name="number_0_1">0.1</string>
    <string name="number_0_3">0.3</string>
    <string name="number_1">1</string>
    <string name="number_3">3</string>
    <string name="number_10">10</string>
    <string name="app_name">FabScreen</string>
    <string name="todo">TODO</string>
    <string name="debug">debug</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder_long">Placeholder-Placeholder-Placeholder-123</string>
    <string name="placeholder_multiline">Placeholder\nPlaceholder\nPlaceholder</string>
    <string name="all_0">0</string>
    <string name="all_0_00">0.00</string>
    <string name="all_0_000">0.000</string>
    <string name="all_1">1</string>
    <string name="all_2">2</string>
    <string name="all_3">3</string>
    <string name="all_4">4</string>
    <string name="all_5">5</string>
    <string name="all_6">6</string>
    <string name="all_7">7</string>
    <string name="all_8">8</string>
    <string name="all_9">9</string>
    <string name="all_0_05mm">0.05 mm</string>
    <string name="all_0_1mm">0.1 mm</string>
    <string name="all_0_2mm">0.2 mm</string>
    <string name="all_0_3mm">0.3 mm</string>
    <string name="all_0_5mm">0.5 mm</string>
    <string name="all_1mm">1 mm</string>
    <string name="all_5mm">5 mm</string>
    <string name="all_10mm">10 mm</string>
    <string name="all_0_2degree">0.2°</string>
    <string name="all_1degree">1°</string>
    <string name="all_5degree">5°</string>
    <string name="all_unit_mm">mm</string>
    <string name="all_unit_mm_with_space"> mm</string>
    <string name="all_feedrate_unit">mm/min</string>
    <string name="all_unit_temperature">°C</string>
    <string name="all_unit_percentage">%</string>
    <string name="all_unit_rpm">RPM</string>
    <string name="all_slash">/</string>
    <string name="all_format_float">%.1f</string>
    <string name="all_format_int">%d</string>
    <string name="all_unit_degree">°</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="exception_receiving_file">An error occurred while receiving the file.</string>
    <string name="all_homing_content">To continue, the machine needs to go to its home position. Homing works by moving the toolhead in X, Y, and Z orientations to the pre-defined position, whose coordinates serve as reference points.</string>
    <string name="all_homing_title_going_home">Go Home</string>
    <string name="all_homing_title_homing">Homing</string>
    <string name="warning_machine_not_responding">The machine is not responding. Would you like to reconnect?</string>
    <string name="all_receiving_file_title">File Transfer Detected</string>
    <string name="firmware_already_newest_version">Latest version already installed.</string>
    <string name="dialog_warning_moving">Toolhead is moving...</string>
    <string name="dialog_file_transfer_successful">File Transferred!</string>
    <string name="dialog_warning_outdated_module_version_detected_notifiy">Outdated module (%s) firmware detected. Please visit our website, download the latest version, and update before use.</string>
    <string name="dialog_warning_outdated_module_version_detected_update">Outdated module (%s) firmware detected. Please update.</string>
    <string name="dialog_warning_invalid_status_detected">Invalid machine data detected, please update to the latest firmware. Click <b>Continue</b> will go to home page.</string>
    <string name="dialog_dual_extruder_hotend_abnormal_content">The toolhead has been powered off. Please shut down the machine and check if both hot ends are properly installed. If the problem persists, please contact our Support.</string>
    <string name="dialog_dual_extruder_hotend_abnormal_title"><b>Abnormal Hot End</b></string>
    <string name="dialog_dual_extruder_heated_bed_leveling_data_invalid_content">Please shut down the machine and check if you\'ve attached the toolhead through the correct screw holes as instructed in the <b>Quick Start Guide</b>.</string>
    <string name="dialog_dual_extruder_heated_bed_leveling_probe_sensor_not_trigger_format">Probe sensor not triggered, result %d\nIf you need any help, please contact our support.</string>
    <string name="dialog_dual_extruder_heated_bed_leveling_params_invalid_format">Probe point params error, result %d\nIf you need any help, please contact our support.</string>
    <string name="dialog_dual_extruder_heated_bed_leveling_hardware_abnormal_format">Hardware abnormal detected, result %d\nIf you need any help, please contact our support.</string>
    <string name="dialog_dual_extruder_heated_bed_leveling_default_format">Auto Bed Leveling failed during probing, result %d\nIf you need any help, please contact our support.</string>
    <string name="dialog_dual_extruder_gcode_retraction_exceed_warning">
        The retraction distance set for this print exceeds the recommended range (0&#8211;2 mm), which might cause nozzle cloggings during printing.
        We suggest that you adjust this parameter in the slicer before starting the print.
    </string>
    <string name="dialog_add_file_into_workspace_low_system_storage_title">Low System Storage</string>
    <string name="dialog_add_file_into_workspace_low_system_storage_desc">The current system storage space is running low. It is recommended to tidy up local files as soon as possible to free up some storage space, as it may affect the system operation.</string>
    <string name="dialog_add_file_into_workspace_insufficient_system_storage_title">Insufficient System Storage</string>
    <string name="dialog_add_file_into_workspace_insufficient_system_storage_desc">The current system storage space is insufficient to print this file. You need to remove some local files to free up enough storage.</string>
    <string name="home_slogan">Make\nSomething\nWonderful</string>
    <string name="home_dialog_update_successful">Updated Successfully</string>
    <string name="home_dialog_update_successful_desc">Already the Latest Version </string>
    <string name="welcome_hello_sentence">Let\'s make something wonderful.</string>
    <string name="welcome_hello_start">Start</string>
    <string name="calibration_auto_leveling">Auto Leveling</string>
    <string name="calibration_manual_leveling">Manual Leveling</string>
    <string name="control_x">X</string>
    <string name="control_y">Y</string>
    <string name="control_z">Z</string>
    <string name="control_home">Home</string>
    <string name="control_goto_origin">Go To Work Origin</string>
    <string name="control_set_origin">Set Work Origin</string>
    <string name="control_set_origin_x">Set X Origin</string>
    <string name="control_set_origin_y">Set Y Origin</string>
    <string name="control_set_origin_z">Set Z Origin</string>
    <string name="calibration_heated_bed_leveling">Leveling</string>
    <string name="dual_extruder_bed_leveling_start_desc">By calibrating the Z offset at specific calibration points, the machine can make real-time compensations during printing to achieve leveling.</string>
    <string name="all_leveling_mode">Mode</string>
    <string name="dual_extruder_leveling_heat_or_not_title">Heated Leveling </string>
    <string name="all_leveling_point_count">Calibration Points</string>
    <string name="z_height_calibration_title">Z Offset Calibration</string>
    <string name="z_height_calibration_start_desc">By calibrating the Z-axis distance (also called the Z offset) between nozzles and the heated bed, the two nozzles can print at the correct and consistent height.</string>
    <string name="all_calibration_mode">Mode</string>
    <string name="all_calibration_auto_title">Auto</string>
    <string name="all_calibration_manual_title">Manual</string>
</resources>