<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_control_laser_page_set_origin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/widget_coordinate_gemini_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/view_control_laser_page_set_origin_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_layout_5"
        android:background="@color/default_theme_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/widget_coordinate_panel">

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_set_origin_x"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/margin_layout_20"
            android:layout_marginTop="@dimen/margin_layout_5"
            app:ab_text="@string/control_x"
            app:ab_title="@string/control_set_origin_x" />

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_set_origin_y"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_control_laser_page_set_origin_set_origin_x"
            android:layout_centerHorizontal="true"
            app:ab_text="@string/control_y"
            app:ab_title="@string/control_set_origin_y" />

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_set_origin_z"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_layout_20"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/btn_control_laser_page_set_origin_set_origin_y"
            app:ab_text="@string/control_z"
            app:ab_title="@string/control_set_origin_z" />

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_home"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_control_laser_page_set_origin_set_origin_x"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_layout_5"
            app:ab_foreground="@drawable/control_btn_home"
            app:ab_title="@string/control_home" />

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_set_origin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_control_laser_page_set_origin_home"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_layout_20"
            app:ab_foreground="@drawable/control_btn_set_origin"
            app:ab_title="@string/control_set_origin" />

        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_control_laser_page_set_origin_goto_origin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_control_laser_page_set_origin_home"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_layout_20"
            app:ab_foreground="@drawable/control_btn_goto_origin"
            app:ab_title="@string/control_goto_origin" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
