<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_theme_background">

    <TextView
        android:id="@+id/tv_welcome_hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@string/font_roboto_condensed"
        android:text="@string/all_hello"
        android:textColor="@color/default_theme_title"
        android:textSize="@dimen/font_size_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_hello_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_5"
        android:text="@string/welcome_hello_sentence"
        android:textColor="@color/default_theme_desc1"
        android:textSize="@dimen/font_size_h4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_hello_title" />

    <Button
        android:id="@+id/btn_welcome_hello_start"
        style="@style/AppTheme.Button.BlueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_45"
        android:layout_marginStart="@dimen/margin_layout_40"
        android:layout_marginEnd="@dimen/margin_layout_40"
        android:layout_marginTop="@dimen/margin_layout_40"
        android:text="@string/welcome_hello_start"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_hello_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>