<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/widget_top_bar_back_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calibration_heated_bed_leveling"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_container"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dual_extruder_bed_leveling_start_desc"
        android:textColor="#E9E9E9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/v_container"
        app:layout_constraintStart_toStartOf="@id/v_container"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_sub_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/all_leveling_mode"
        android:textColor="#E9E9E9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_container"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <!-- why this widget doesn't respect horizontal constraints?-->
    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/sbg_cali_mode"
        style="@style/AppTheme.SegmentedButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title_1">

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/calibration_auto_leveling" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/calibration_manual_leveling" />
    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <!--todo explain heat or not-->
    <TextView
        android:id="@+id/tv_sub_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dual_extruder_leveling_heat_or_not_title"
        android:textColor="#E9E9E9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_container"
        app:layout_constraintTop_toBottomOf="@id/sbg_cali_mode" />

    <!-- why this widget doesn't respect horizontal constraints?-->
    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/sbg_heat_or_not"
        style="@style/AppTheme.SegmentedButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title_2">

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_on" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_off" />
    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <TextView
        android:id="@+id/tv_sub_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/all_leveling_point_count"
        android:textColor="#E9E9E9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/v_container"
        app:layout_constraintTop_toBottomOf="@id/sbg_heat_or_not" />

    <!-- why this widget doesn't respect horizontal constraints?-->
    <co.ceryle.segmentedbutton.SegmentedButtonGroup
        android:id="@+id/sbg_grid"
        style="@style/AppTheme.SegmentedButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title_3">

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6×6" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5×5" />

        <co.ceryle.segmentedbutton.SegmentedButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4×4" />
    </co.ceryle.segmentedbutton.SegmentedButtonGroup>

    <Button
        android:id="@+id/btn_start"
        style="@style/AppTheme.Button.BlueButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/all_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
