<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget_calibration_panel"
    android:layout_width="match_parent"
    android:layout_height="312dp">

    <View
        android:layout_width="144dp"
        android:layout_height="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/custom_grey_700" />

    <View
        android:layout_width="144dp"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/custom_grey_700" />

    <View
        android:layout_width="4dp"
        android:layout_height="144dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="74dp"
        android:background="@color/custom_grey_700" />

    <View
        android:layout_width="4dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="84dp"
        android:background="@color/custom_grey_700" />

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="108dp"
        android:background="@color/custom_grey_700" />


    <!-- 7 8 9
         4 5 6
         1 2 3 -->

    <RelativeLayout
        android:id="@+id/view_calibration_panel_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_layout_20">

        <!-- 7 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_8"
            android:layout_toStartOf="@id/btn_calibration_point_8"
            app:ab_size="mini"
            app:ab_text="@string/all_7" />

        <!-- 8 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:ab_size="mini"
            app:ab_text="@string/all_6" />

        <!-- 9 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_8"
            android:layout_toEndOf="@id/btn_calibration_point_8"
            app:ab_size="mini"
            app:ab_text="@string/all_5" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_calibration_panel_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <!-- 4 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_5"
            android:layout_toStartOf="@id/btn_calibration_point_5"
            app:ab_size="mini"
            app:ab_text="@string/all_8" />

        <!-- 5 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:ab_size="mini"
            app:ab_text="@string/all_9" />

        <!-- 6 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_5"
            android:layout_toEndOf="@id/btn_calibration_point_5"
            app:ab_size="mini"
            app:ab_text="@string/all_4" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_calibration_panel_row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_layout_20">

        <!-- 1 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_2"
            android:layout_toStartOf="@id/btn_calibration_point_2"
            app:ab_size="mini"
            app:ab_text="@string/all_1" />

        <!-- 2 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:ab_size="mini"
            app:ab_text="@string/all_2" />

        <!-- 3 -->
        <fabscreen.libraries.legacy.view.ActionButton
            android:id="@+id/btn_calibration_point_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_calibration_point_2"
            android:layout_toEndOf="@id/btn_calibration_point_2"
            app:ab_size="mini"
            app:ab_text="@string/all_3" />

    </RelativeLayout>

</RelativeLayout>
